[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/controller/InvestasiController.gd" type="Script" id=1]
[ext_resource path="res://asset/ui/ui.theme" type="Theme" id=2]
[ext_resource path="res://asset/ui/button/btn_tambah.res" type="PackedScene" id=3]
[ext_resource path="res://asset/ui/font/NotoSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/ui/msgbox/ModalBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/lib/DBconnection.res" type="PackedScene" id=6]
[ext_resource path="res://asset/ui/msgbox/ModalBox.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="ImageTexture" id=2]

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.929412, 0.929412, 0.929412, 1 )

[sub_resource type="ImageTexture" id=5]

[node name="pengusaha" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 17.0
margin_right = -136.0
margin_bottom = 177.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DBconnection" parent="." instance=ExtResource( 6 )]

[node name="table" type="ItemList" parent="."]
margin_left = -18.0
margin_top = 70.0
margin_right = 814.0
margin_bottom = 597.0
theme = ExtResource( 2 )
custom_styles/bg = SubResource( 1 )
custom_colors/font_color_selected = Color( 0, 0.454902, 0.807843, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
items = [ "No", null, false, "Nomor Rekening", null, false, "Nominal", null, false, "Tanggal", null, false, "Status", null, false, "Aksi", SubResource( 2 ), false ]
allow_reselect = true
auto_height = true
max_columns = 7
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modal" type="Control" parent="." instance=ExtResource( 5 )]
anchor_left = 0.127
anchor_top = 0.087
anchor_right = 0.127
anchor_bottom = 0.087
margin_left = -130.048
margin_top = -52.2
margin_right = 893.952
margin_bottom = 547.8
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Control" parent="modal"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 205.216
margin_top = 132.0
margin_right = -207.784
margin_bottom = -127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="modal/edit"]
margin_left = 16.0
margin_top = 8.3755
margin_right = 61.0
margin_bottom = 31.3755
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Bukti"

[node name="bukti" type="TextureRect" parent="modal/edit"]
margin_left = 14.0
margin_top = 40.0
margin_right = 377.0
margin_bottom = 343.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="in_status" type="OptionButton" parent="modal/edit"]
margin_left = 409.0
margin_top = 48.0
margin_right = 574.0
margin_bottom = 79.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "kosong"
items = [ "kosong", null, true, 0, null, "diterima", null, false, 1, null, "dikembalikan", null, false, 2, null, "disimpan", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="modal/edit/in_status"]
margin_left = 2.0
margin_top = -31.6245
margin_right = 47.0
margin_bottom = -8.62447
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Status"

[node name="btn_confirm" type="Button" parent="modal/edit" instance=ExtResource( 3 )]
margin_left = 460.069
margin_top = 307.643
margin_right = 579.069
margin_bottom = 336.643
theme = ExtResource( 2 )
text = "Simpan"
icon = SubResource( 5 )
clip_text = true

[node name="id_investasi" type="LineEdit" parent="modal/edit"]
visible = false
margin_right = 58.0
margin_bottom = 24.0
[connection signal="request_completed" from="DBconnection" to="." method="request_completed"]
[connection signal="item_rmb_selected" from="table" to="." method="_on_table_item_rmb_selected"]
[connection signal="item_selected" from="table" to="." method="_on_table_item_selected"]
[connection signal="button_up" from="modal/edit/btn_confirm" to="." method="_on_btn_confirm_button_up"]
